test/fail/interpolation/interp_multiline.lily
#[
SyntaxError: Newline in interpolated section.
    from interp_multiline.lily:6:
]#

var v = $"^(
"
